@@ -152,7 +152,9 @@ result indicator period target:before	{content:"Target "; font-size:14px; color:
 result indicator period actual:before	{content:"Actual "; font-size:14px; color:#000; display:block; padding-right:10px;}
 
 result indicator period period-start, result indicator period period-end,
-result indicator period target, result indicator period actual	{display:inline-block; vertical-align:top; width:220px; max-width:220px; line-height:1.35em;}
+result indicator period target, result indicator period actual	{display:inline-block; vertical-align:top; width:150px; max-width:150px; line-height:1.35em;}
+result indicator period target, result indicator period actual	{width:280px; max-width:280px;}
+result indicator period target	{padding-right:20px;}
 
 result indicator period actual comment narrative	{display:block; padding:10px 0;}
 
@@ -217,7 +219,7 @@ receiver-org		{display:inline-block; vertical-align:top; color:#000; font-size:1
 value				{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:120px; max-width:120px; padding-right:40px; line-height:1.35em; text-align:right;}
 value span		{font-size:12px; color:#000;}
 
-span.span_transaction transaction:nth-of-type(1) description:before {content:"DESCRIPTION"; font-size:14px; color:#000; width:235px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) description:before {content:"DESCRIPTION"; font-size:14px; color:#000; width:235px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 span.span_transaction transaction description {display:inline-block; vertical-align:top; padding:0px; width:220px; max-width:220px; padding-right:15px; text-align:left; color:#000; font-size:1.0em; line-height:1.35em; border:0; background-color:transparent;}
 /*span.span_transaction transaction description:nth-of-type(n+1):before		{display:none;}*/
 
