@@ -1,3 +1,9 @@
+Development Portal (2016-12-04 shi)
+==============================
+Update width columns for result table in SAVi
+Add css for 'flow-type' and 'finance-type' in SAVi
+
+
 Development Portal (2016-12-02 shi)
 ==============================
 Update fixes for inspire template
